@@ -103,6 +103,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Dnet.bytebuddy.experimental=true</argLine>
                     <systemPropertyVariables>
                         <jwt.secret>test-secret-test-secret-test-secret-32+bytes</jwt.secret>
                     </systemPropertyVariables>
@@ -112,6 +113,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Dnet.bytebuddy.experimental=true</argLine>
                     <systemPropertyVariables>
                         <jwt.secret>test-secret-test-secret-test-secret-32+bytes</jwt.secret>
                     </systemPropertyVariables>
